# tailslayer

./: CMakeLists.txt  Makefile  README.md  tailslayer_example  tailslayer_example.cpp
cmake/: FindLibm.cmake  tailslayer-config.cmake.in
discovery/: CMakeLists.txt  trefi_probe.c
discovery/benchmark/: CMakeLists.txt  Makefile  hw_utils.hpp
include/tailslayer/: hedged_reader.hpp
scripts/: enable_1g_hugepages.sh
